# Starbound-Patch-Helper

./: .gitignore  CMakeLists.txt  README.md  global_settings.cpp  global_settings.h  json_intermediary_writer.cpp  json_intermediary_writer.h  json_patch_writer.cpp  json_patch_writer.h  parse_settings.cpp  parse_settings.h  patch_style_settings.cpp  patch_style_settings.h  starbound_patch_helper.cpp  user_interaction_helper.cpp  user_interaction_helper.h  utilities.cpp  utilities.h
config/patch_styles/: default.json  silver.json
parse target examples/custom scan dialog - copy vanilla/: object.json
parse target examples/custom scan dialog - copy vanilla with references/: object.json
parse target examples/custom scan dialog - manual/: object.json
parse target examples/custom scan dialog - manual with references/: object.json
parse target examples/localization/: activeitem.json  biome.json  chest.json  codex.json  collection.json  grass.json  inspectiontool.json  liquid.json  material.json  matmod.json  monstertype.json  object.json  species.json  statuseffect.json  tech.json  thrownitem.json  unlock.json
